# backlot

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  MONOREPO.md  README.md  backlot_project_assistant.nu  backlot_project_assistant_pi.nu  backlot_shell.nu  fix_issues_loop.nu  monitor_loop.nu
.github/workflows/: ci.yml
.pi/extensions/fix-issues-loop/: index.ts
.pi/extensions/fix-issues-loop/commands/: get-issues-summary.ts  pick-issue.ts
.pi/prompts/: implement-gate.md
cue/: Cargo.toml
cue/src/: config.rs  context.rs  events.rs  lib.rs  orchestrator.rs  traits.rs  types.rs
docs/: CUE_DESIGN.md  DEDEPENDENCY.md  EPIC_DESIGN.md  EVENTS_RECONSIDERATIONS.md  FLICK_DESIGN.md  GATE_DESIGN.md  GRAPHS_DSL.md  ISSUES.md  ISSUES_CONFIG.md  MECH_SPEC.md  ORCHESTRATOR_EXTRACTION.md  REEL_DESIGN.md  STATUS.md  VAULT_DESIGN.md
docs/epic/: DESIGN.md  STATUS.md
docs/flick/: DESIGN.md
docs/vault/: DESIGN.md
epic/: Cargo.toml  README.md
epic/.cargo/: config.toml
epic/docs/: DESIGN.md  EVENTS_RECONSIDERATIONS.md  ISSUES.md  ORCHESTRATOR_EXTRACTION.md  STATUS.md  TEST_AUDIT.md
epic/src/: events.rs  init.rs  knowledge.rs  main.rs  sandbox.rs  state.rs  store.rs  test_support.rs
epic/src/agent/: mod.rs  prompts.rs  reel_adapter.rs  wire.rs
epic/src/config/: project.rs
epic/src/orchestrator/: context.rs  mod.rs  services.rs  tests.rs
epic/src/task/: assess.rs  branch.rs  leaf.rs  mod.rs  node_impl.rs  scope.rs  verify.rs
epic/src/tui/: mod.rs
flick/flick/: Cargo.toml
flick/flick-cli/: Cargo.toml
flick/flick-cli/src/: prompter.rs
flick/flick/src/: config.rs  model_registry.rs  platform.rs  provider_registry.rs
flick/flick/src/provider/: messages.rs
gate/: Cargo.toml  DESIGN.md  FINDINGS.md  README.md
gate/fixtures/flick/: balanced.yaml  basic.yaml  invalid_model.yaml  structured.yaml  tools.yaml
gate/fixtures/lot/linux/: fs-read.yaml
gate/fixtures/lot/macos/: fs-deny.yaml  fs-write.yaml  network-denied.yaml  timeout.yaml
gate/fixtures/lot/windows/: network-allowed.yaml
gate/fixtures/reel/: invalid_model.yaml  nushell.yaml  readonly.yaml  write.yaml
gate/fixtures/vault/: config.yaml
gate/src/: check.rs  exec.rs  main.rs  prereqs.rs  report.rs  runner.rs  scratch.rs  types.rs
gate/src/stage/: epic.rs  flick.rs  lot.rs  mech.rs  mod.rs  reel.rs  vault.rs
lot/: Todo.md  lot.sh  unity-scanner.yaml
lot/lot/: Cargo.toml
lot/lot-cli/: Cargo.toml
lot/lot-cli/src/: config.rs  main.rs
lot/lot/src/: command.rs  env_check.rs  policy.rs  policy_builder.rs
lot/lot/src/macos/: seatbelt.rs
mech/: CHANGELOG.md  Cargo.toml  README.md
mech-cli/: Cargo.toml
mech-cli/src/: main.rs
mech/examples/: dataflow_pipeline.yaml  function_composition.yaml  imperative_routing.yaml
mech/src/: cel.rs  context.rs  conversation.rs  cue_integration.rs  error.rs  lib.rs  loader.rs  validate.rs  workflow.rs
mech/src/exec/: agent.rs  call.rs  dataflow.rs  function.rs  mod.rs  prompt.rs  schedule.rs  system.rs  test_support.rs  workflow.rs
mech/src/loader/: mod.rs  tests.rs
mech/src/schema/: agent.rs  blocks.rs  full_example.yaml  infer.rs  mod.rs  mode.rs  registry.rs  schema_ref.rs  workflow.rs
mech/src/validate/: agents.rs  blocks.rs  cel_check.rs  graph.rs  helpers.rs  mod.rs  model.rs  report.rs  schema_check.rs  tests.rs
mech/testdata/: full_example.yaml
mech/tests/: integration.rs
prompts/: project_assistant.md
reel/reel/: Cargo.toml
reel/reel-cli/: Cargo.toml
reel/reel/src/: nu_session.rs
scripts/: extract_prompt.md  migrate_issues.nu  migrate_one_issue.nu  remove_prompt.md  setup_labels.nu  test_extract.nu  test_remove.nu
specs/: FIX_BUGS_LOOP.md  GATE.md  ISSUES_TO_GITHUB.md
specs/gate/: D1.md  D2.md  D3.md  D4.md  D5.md  D6.md  D7.md  D8.md
traits/: Cargo.toml
traits/src/: lib.rs
vault/: Cargo.toml  LICENSE-APACHE  README.md  vault_project_assistant.nu  vault_shell.nu
vault/.github/workflows/: ci.yml
vault/docs/: DESIGN.md  ISSUES.md  SPEC.md  STATUS.md  UPGRADE.md
vault/prompts/: project_assistant.md
vault/vault/: Cargo.toml
vault/vault-cli/: Cargo.toml
vault/vault-cli/src/: main.rs
vault/vault/src/: bootstrap.rs  lib.rs  librarian.rs  prompts.rs  query.rs  record.rs  reorganize.rs  storage.rs  test_support.rs
