[workspace]
members = [
    "cue",
    "flick/flick",
    "flick/flick-cli",
    "lot/lot",
    "lot/lot-cli",
    "mech",
    "reel/reel",
    "reel/reel-cli",
    "epic",
    "traits",
    "vault/vault",
    "vault/vault-cli",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.85"

[workspace.dependencies]
# Internal crates
cue = { path = "cue" }
flick = { path = "flick/flick" }
lot = { path = "lot/lot" }
mech = { path = "mech" }
reel = { path = "reel/reel" }
traits = { path = "traits" }
vault = { path = "vault/vault" }

# Shared external deps
tokio = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
tempfile = "3"
toml = "0.8"
serde_yml = "0.0.12"
anyhow = "1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
cel-interpreter = "0.9"
schemars = "0.8"
jsonschema = "0.28"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
all = "deny"
