[package]
name = "epic"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt", "macros", "time", "sync", "process", "fs", "signal", "io-util"] }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
clap = { workspace = true, features = ["env"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"
cue.workspace = true
lot = { workspace = true, features = ["tokio"] }
traits.workspace = true
tempfile.workspace = true
reel.workspace = true
vault.workspace = true

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"

[dev-dependencies]
reel = { workspace = true, features = ["testing"] }
