[package]
name = "mech"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
cue.workspace = true
reel.workspace = true
cel-interpreter.workspace = true
cel-parser = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yml.workspace = true
schemars.workspace = true
jsonschema.workspace = true
thiserror.workspace = true
traits.workspace = true
anyhow.workspace = true
tokio = { workspace = true, features = ["sync", "time", "rt"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
serde_json = { workspace = true }
cue = { workspace = true }
traits = { workspace = true }

[lints.rust]
unsafe_code = "deny"

[lints.clippy]
all = { level = "deny", priority = -1 }
