[package]
name = "flick-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "flick"
path = "src/main.rs"

[dependencies]
flick = { path = "../flick", features = ["cli"] }
clap.workspace = true
dialoguer = "0.12"
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros", "fs", "io-util"] }
xxhash-rust.workspace = true

[dev-dependencies]
flick = { path = "../flick", features = ["cli", "testing"] }
tempfile.workspace = true

[lints]
workspace = true
