[package]
name = "flick"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
toml.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "fs", "io-util", "time"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
chacha20poly1305 = "0.10"
zeroize = { version = "1", features = ["alloc"] }
hex = "0.4"
url = "2"
xxhash-rust.workspace = true
clap = { workspace = true, optional = true }

[features]
cli = ["clap"]
testing = []

[target.'cfg(windows)'.dependencies]
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_Threading",
] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }
wiremock = "0.6"
serial_test = "3"

[lints]
workspace = true
