[package]
name = "lot-cli"
description = "CLI for lot cross-platform process sandboxing"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "lot"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
lot = { path = "../lot", features = ["tokio"] }
clap.workspace = true
serde.workspace = true
serde_yml.workspace = true
tokio = { workspace = true, features = ["rt", "time", "macros"] }

[dev-dependencies]
tempfile.workspace = true
