[package]
name = "reel-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "reel"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
reel = { path = "../reel" }
clap.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true
