[package]
name = "reel"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
testing = ["flick/testing"]

[dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time", "sync", "process", "fs", "signal", "io-util"] }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
flick.workspace = true
bitflags = "2"
lot = { workspace = true, features = ["tokio"] }
tempfile.workspace = true

[build-dependencies]
ureq = "3"
sha2 = "0.10"
flate2 = "1"
tar = "0.4"
zip = "2"

[dev-dependencies]
flick = { workspace = true, features = ["testing"] }
