[package]
name = "vault-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "vault"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vault = { path = "../vault" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt", "macros"] }
reel = { git = "https://github.com/bitmonk8/reel", rev = "a6be158" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

[dev-dependencies]
tempfile = "3"
