[package]
name = "vault-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "vault"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
vault = { path = "../vault" }
clap.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
reel.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yml.workspace = true

[dev-dependencies]
tempfile.workspace = true
