[package]
name = "vault"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
reel.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
regex = "1"

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
